"""Bazel module dependencies"""

module(
    name = "com_google_protobuf_examples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "0.0.0", repo_name = "com_google_protobuf")
local_path_override(
    module_name = "protobuf",
    path = "..",
)

bazel_dep(name = "com_google_protobuf-examples-with-hyphen", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "com_google_protobuf-examples-with-hyphen",
    path = "examples_with_hyphen",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "2.2.0")

# TODO: rsartor - Remove this override once rules_python is updated to 2.2+.
git_override(
    module_name = "rules_python",
    commit = "cd3d854888afe2b72f716ffd1ad191770b3d7646",
    remote = "https://github.com/rsartor-cmd/rules_python",
)
