load("@rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:proto_library.bzl", "proto_library")

filegroup(
    name = "go_features_proto_srcs",
    srcs = ["google/protobuf/go_features.proto"],
    visibility = ["//:__subpackages__"],
)

proto_library(
    name = "go_features_proto",
    srcs = ["google/protobuf/go_features.proto"],
    strip_import_prefix = "/go",
    visibility = ["//:__subpackages__"],
    deps = ["//:descriptor_proto"],
)

go_proto_library(
    name = "cpp_features_go_proto",
    importpath = "github.com/protocolbuffers/protobuf/cpp_features_go_proto",
    proto = "//:cpp_features_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "java_features_go_proto",
    importpath = "github.com/protocolbuffers/protobuf/java_features_go_proto",
    proto = "//java/core:java_features_proto",
    visibility = ["//visibility:public"],
)
